# HoshinoBot-Docker

./: Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-build.yml  gocqhttp-build.yml  hoshinobot-build.yml  k-build.yml  nonebot-all4one-build.yml  q-build.yml  teydacore-build.yml  walle-k-build.yml
gocqhttp/: Dockerfile  fetch-latest.py  ffmpeg.Dockerfile
hoshinobot/: Dockerfile
nonebot-all4one/: .env  Dockerfile  pyproject.toml
teydacore/: Dockerfile  main.ts
walle-k/: Dockerfile
walle-q/: Dockerfile
